# CRM_Analysis

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  publish.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/CRM_Analysis/: CRM_Analysis.py  __init__.py  cli.py
tests/: __init__.py  test_CRM_Analysis.py
