[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CRM_Analysis"
version = "0.1.0"
description = "I'll expand the CRMAnalytics class to include these important aspects of customer relationship management"
readme = "README.rst"
authors = [
  {name = "CRM_Analysis", email = "mohamadbagherdavoodi@gmail.com"}
]
maintainers = [
  {name = "CRM_Analysis", email = "mohamadbagherdavoodi@gmail.com"}
]
classifiers = [

]
license = {text = "Not open source"}

# Specify the required Python version
requires-python = ">=3.7"

dependencies = [
  "typer",
  "numpy>=1.21",  # Example dependency
  "pandas>=1.3",  # Example dependency
]



[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/smbd1368/CRM_Analysis/issues"
changelog = "https://github.com/smbd1368/CRM_Analysis/blob/master/changelog.md"
homepage = "https://github.com/smbd1368/CRM_Analysis"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

